# invoice-generator-windows

./: Cargo.toml  README.md  build.rs
res/: hours.csv
res/examples/: plant_03_invoice.xlsx
res/summaries/plant-01/combined/: plant_01_combined.xlsx  plant_01_combined_without_title.xlsx
res/summaries/plant-01/raw/: Yield and Revenue Summary_01-03-2023.xlsx  Yield and Revenue Summary_02-03-2023.xlsx  Yield and Revenue Summary_03-03-2023.xlsx  Yield and Revenue Summary_04-03-2023.xlsx  Yield and Revenue Summary_05-03-2023.xlsx  Yield and Revenue Summary_06-03-2023.xlsx  Yield and Revenue Summary_07-03-2023.xlsx  Yield and Revenue Summary_08-03-2023.xlsx  Yield and Revenue Summary_09-03-2023.xlsx  Yield and Revenue Summary_10-03-2023.xlsx  Yield and Revenue Summary_11-03-2023.xlsx  Yield and Revenue Summary_12-03-2023.xlsx  Yield and Revenue Summary_13-03-2023.xlsx  Yield and Revenue Summary_14-03-2023.xlsx  Yield and Revenue Summary_15-03-2023.xlsx  Yield and Revenue Summary_16-03-2023.xlsx  Yield and Revenue Summary_17-02-2023.xlsx  Yield and Revenue Summary_18-02-2023.xlsx  (+10 more)
src/: data.rs  hours_row.rs  hours_window.rs  lib.rs  main.rs  main_window.rs  row_headers.rs
src/data/: daily_schedule.rs  hours.rs  invoice_entry.rs  invoice_totals.rs  power_totals.rs  record.rs
src/hours_row/: imp.rs
src/hours_window/: imp.rs  rows.rs  schedule.rs
src/main_window/: imp.rs
src/resources/: hours_window.ui  main_window.ui  resources.gresource.xml
src/row_headers/: imp.rs
tests/: integration_tests.rs  test_invoice_totals.rs
tests/setup/: mod.rs  test_data.rs
(+63 files in other folders)
