[package]
name = "invoice-generator"
version = "0.1.0"
edition = "2021"
description = "An invoice generator app that calculates consumption from inverter yield and export data"
license = "GPL-3.0-or-later"
authors = ["Matthew Pratt"]

[dependencies]
adw = { package = "libadwaita", version = "0.4", features = ["v1_2"] }
calamine = "0.19"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.2"
excel = { package = "simple_excel_writer", version = "0.2" }
gtk = { package = "gtk4", version = "0.6", features = ["v4_10"] }
itertools = "0.10"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
glib-build-tools = "0.17"
